<resources>
    <string name="app_name">Prog-mobile-TP1</string>

    <!-- Exercice 3 -->
    <string name="label_lastname">Nom</string>
    <string name="label_firstname">Prénom</string>
    <string name="label_age">Âge</string>
    <string name="label_skills">Domaine de compétences</string>
    <string name="label_phone">N° de téléphone</string>

    <!-- Exercice 4 -->
    <string name="label_menu_helloworld" translatable="false">Hello World</string>
    <string name="label_menu_simple">Interface simple</string>
    <string name="label_menu_train">Interface Train</string>
    <string name="label_menu_agenda">Interface Agenda</string>
    <string name="label_menu_lang">Changer de langue</string>

    <!-- Exercice 5 -->
    <string name="label_btn_confirm">Valider</string>
    <string name="label_alert_confirm">Voulez-vous vraiment valider ?</string>
    <string name="label_alert_yes">Oui</string>
    <string name="label_alert_no">Non</string>

    <!-- Exercice 6 -->
    <string name="button_previous">Retour</string>
    <string name="button_ok">OK</string>
    <string name="no_data">Pas de données saisies !</string>

    <!-- Exercice 7 -->
    <string name="button_call">Appeler</string>

    <!-- Exercice 8 -->
    <string name="label_departure">Départ</string>
    <string name="label_arrival">Arrivée</string>
    <string name="hint_departure">Gare de départ</string>
    <string name="hint_arrival">Gare d\'arrivée</string>
    <string name="button_search">Rechercher</string>

    <!-- Exercice 9 -->
    <string name="hint_edit_new_event">Description événement</string>
    <string name="button_add">Ajouter</string>
    <string name="label_events">Événements du </string>
</resources>