<?xml version="1.0" encoding="utf-8"?>
<!--- Exercice 9 -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgendaActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CalendarView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calendar"
            android:layout_weight="1"></CalendarView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_new_event"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/hint_edit_new_event"
                android:inputType="text"
                android:ellipsize="end" />

            <Button
                app:layout_constraintVertical_bias="0.5"
                android:id="@+id/button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_add" />

        </LinearLayout>

        <TextView
            android:id="@+id/label_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_events"></TextView>

        <ListView
            android:id="@+id/event_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        </ListView>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>